Добавлил изоляцию директорий пользователей друг от друга на сервере